src/App.css
body {
  font-family: "Vollkorn", serif;
}

.home-page {
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #f3faf9;
}

.nav-list {
  display: flex;
  flex-direction: row;
  list-style-type: none;
  justify-content: flex-start;
  flex-wrap: wrap;
  width: 100%;
  background-color: #27685b;
  position: fixed;
  font-size: 4vh;
}

.nav-list li {
  padding: 9px;
}

.nav {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: inherit;
}

.nav-header {
  color: #379683;
  flex-basis: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px;
  margin: 0px;
}

#name {
  color: #79cdbd;
}

#handshake {
  font-size: 100px;
}
#nav-header-text {
  font-size: 13vh;
}
#nav-header-subtext {
  font-size: 7vh;
}

#nav-header-subtext {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: 0.15em solid orange; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: 0.1em; /* Adjust as needed */
  animation: typing 2s steps(40, end), blink-caret 0.75s step-end infinite;
}

@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 50%;
  }
}

@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: grey;
  }
}
.about-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: inherit;
  height: 100vh;
  padding: 0px;
  border-bottom: 3px solid #f2faf8;
}

#about-paragraph {
  text-align: center;
  width: 70%;
  font-size: 5vh;
}

#about-content {
  width: 50%;
  font-size: 2vh;
}
#skills {
  font-size: 3vh;
  text-align: center;
}

.about-item-container-photo {
  flex-basis: 33%;
  display: flex;
  justify-content: space-around;
}

.projects-title,
#about-paragraph-header {
  font-size: 5vh;
}
.footer-title {
  font-size: 30px;
}

.project-description,
.project-tech {
  font-size: 14px;
}

#projects-page {
  display: flex;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  flex-direction: column;
  align-content: space-around;
  align-items: center;
  min-height: 100vh;
  padding-top: 60px;
  padding-bottom: 30px;
}

.all-project-items-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 90%;
  flex-wrap: wrap;
  align-items: flex-start;
  align-content: space-between;
  width: inherit;
  height: auto;
}

.project-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-basis: 40%;
  margin: 15px;
}

#projects-page {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 15px;
}

#projects-title {
  flex-basis: 100%;
}

.single-sub-item {
  padding-bottom: 20px;
}
.single-text-item {
  width: 450px;
}

.project-photo {
  height: auto;
  width: 450px;
  border: 1px;
  border-color: black;
  border-style: solid;
}

.project-photo:hover {
  box-shadow: 0 0 15px rgba(33, 33, 33, 0.2);
}

.project-title {
  text-align: center;
}

#contact {
  padding: 20px;
  font-size: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  background-color: #27685b;
  color: #a6ded3;
  height: 20vh;
}

.footer-contact-container,
.nav-contact-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 125px;
  font-size: 30px;
  color: #a6ded3;
}

.footer-title {
  text-shadow: -0.1px 0 black, 0 0.1px black, 0.1px 0 black, 0 -0.1px black;
}

#about-me {
  width: 70%;
}
.nav-list a:hover {
  border-bottom: 1px solid #a6ded3;
  border-top: 1px solid #a6ded3;
}

a {
  color: #a6ded3;
  text-decoration: none;
}

a:visited {
  color: #a6ded3;
}

.nav-contact-container a {
  color: #27685b;
}

.nav-contact-container a:visited {
  color: #27685b;
}
.nav-contact-container a:hover {
  color: #a6ded3;
}

@media screen and (max-width: 1139px) {
  #projects-page {
    padding-top: 8vh;
  }
  .project-item {
    flex-basis: 70%;
  }
  .project-photo {
    width: 500px;
  }
  .single-text-item {
    width: 500px;
  }
}
@media screen and (max-width: 900px) {
  #nav-header-text {
    font-size: 72px;
  }

  .about-item-container-paragraph {
    flex-basis: 78%;
  }

  #about-content {
    width: 80%;
  }
  .about-page {
    margin: 0px;
    padding: 2px;
  }

  #about-paragraph {
    width: 100%;
    font-size: 30px;
  }

  .all-project-items-container {
    width: 90%;
  }

  #skills {
    font-size: 3vh;
    text-align: center;
  }

  #contact {
    padding: 15px;
  }
}

@media screen and (max-width: 600px) {
  .project-photo {
    width: 350px;
  }
  .single-text-item {
    width: 350px;
  }
}

/* mobile */
@media screen and (max-width: 489px) {
  #nav-header-text {
    font-size: 45px;
  }
  #nav-header-subtext {
    font-size: 4vh;
  }

  .about-item-container-paragraph {
    flex-basis: 90%;
  }

  .about-item-container-paragraph img {
    height: 120px;
    width: auto;
  }
  #about-paragraph {
    width: 100%;
  }

  #skills {
    font-size: 15px;
  }

  #projects-page {
    padding-top: 7vh;
    padding-bottom: 1vh;
  }
  .project-description,
  .project-tech {
    font-size: 12px;
  }
  .nav-list {
    font-size: 20px;
  }

  .about-page {
    padding: 0px;
    margin: 0px;
    padding-top: 6vh;
  }
  #about-content {
    width: 85%;
  }
  .project-photo {
    height: auto;
    width: 278px;
  }

  .single-text-item {
    width: 278px;
  }
  #about-paragraph-header,
  .projects-title,
  .footer-title {
    font-size: 4vh;
  }
  #built-by {
    font-size: 12px;
  }
  #contact {
    height: auto;
  }
}

